--- a/css/main.scss
+++ b/css/main.scss
@@ -336,7 +336,7 @@ body {
     
         img {
             width: 100%;
-            filter: brightness(75%);
+            filter: brightness(60%);
         }
     }
 }
@@ -458,6 +458,8 @@ body {
         }
     
         .card-group {
+            padding: 0;
+
             .tile {
                 background-color: var(--bs-tertiary-background);
                 border: none;
@@ -491,7 +493,7 @@ body {
                     }
         
                     .testimonial-author {
-                        color: var(--bs-darker-text);
+                        color: var(--bs-secondary-background);
                         text-align: center;
                         font-weight: bold;
                     }
@@ -504,11 +506,16 @@ body {
 /****************** HOME - ADDRESS AND CONTACT ******************/
 
 .address-contact-component{
-    background-color: var(--bs-dark-green);
+    background-color: var(--bs-primary-background);
     margin: 60px 0;
+
+    .row {
+        background-color: var(--bs-dark-green);
+    }
 
     .address-contact-container{
         background-color: var(--bs-dark-green);
+        padding: 0;
         
         .address-contact-text-container {
             width: 65%;
@@ -530,6 +537,10 @@ body {
                 display: flex;
                 justify-content: flex-start;
             }
+        }
+
+        iframe {
+            filter: brightness(90%);
         }
     }
 }
@@ -564,6 +575,10 @@ body {
                 margin: 0;
             }
         }
+    }
+
+    #sbi_images {
+        padding: 0;
     }
 }
 
@@ -748,11 +763,10 @@ body {
     }
 
     .tiles-row {
-        .row{
-            padding: 30px 0;
-        }
     
         .card-group {
+            padding: 0;
+
             .tile-dark {
                 background-color: var(--bs-tertiary-background);
                 border: none;
@@ -769,6 +783,8 @@ body {
                     h3 {
                         color: var(--bs-lighter-text);
                         font-weight: bold;
+                        margin-bottom: 25px;
+                        // height: 75px;
                     }
         
                     .card-text {
@@ -796,6 +812,8 @@ body {
                     h3 {
                         color: var(--bs-darker-text);
                         font-weight: bold;
+                        margin-bottom: 25px;
+                        // height: 75px;
                     }
         
                     .card-text {
@@ -806,6 +824,71 @@ body {
                     }
                 }
             }
+        }
+    }
+}
+
+/****************** ABOUT US - HENNE STRAND ******************/
+
+.about-henne-strand-component{
+    background-color: var(--bs-primary-background);
+    margin: 60px 0;
+
+    .about-henne-strand-container {
+        width: 50%;
+    
+        .about-henne-strand-text-container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+    
+            h2 {
+                text-align: center;
+                color: var(--bs-darker-text);
+                margin-bottom: 15px;
+            }
+    
+            p {
+                text-align: center;
+                color: var(--bs-darker-text);
+                margin: 0;
+            }
+        }
+    }
+
+    .about-henne-strand-gallery-container {
+        padding-top: 30px;
+    }
+}
+
+/****************** ABOUT US - CONTACT ******************/
+
+.about-contact-component{
+    position: relative;
+    min-height: 500px;
+    margin: 60px 0;
+
+    .about-contact-content-container{
+        z-index: 1;
+
+        h2 {
+            text-align: center;
+            margin-bottom: 15px;
+            width: 85%;
+            color: var(--bs-lighter-text);
+        }
+    }
+
+    .bg-image-container{
+        width: 100%;
+        position: absolute;
+        transform-origin: top center;
+        transform: scale(1.0);
+    
+        img {
+            width: 100%;
+            filter: brightness(60%);
         }
     }
 }
@@ -1032,3 +1115,272 @@ body {
     }
 }
 
+/****************** CUSTOM CAKE - HERO ******************/
+
+.custom-cake-hero-component{
+    position: relative;
+    min-height: 400px;
+    background-color: var(--bs-primary-background);
+
+    .custom-cake-hero-content-container{
+        z-index: 1;
+        width: 100%;
+
+        h1 {
+            color: var(--bs-lighter-text);
+            width: 100%;
+            text-align: center;
+        }
+    }
+
+    .bg-image-container{
+        width: 100%;
+        position: absolute;
+    
+        img {
+            width: 100%;
+            filter: brightness(60%);
+        }
+    }
+}
+
+/****************** CUSTOM CAKE - FORM HEADER ******************/
+
+.custom-cake-form-header-component{
+    background-color: var(--bs-primary-background);
+
+    .custom-cake-form-header-text-container {
+        width: 75%;
+    
+        .custom-cake-form-header-text {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+    
+            h2 {
+                text-align: center;
+                color: var(--bs-darker-text);
+                margin-bottom: 15px;
+            }
+        }
+    }
+}
+
+/****************** CUSTOM CAKE - ORDER FORM ******************/
+
+.custom-cake-order-form-component {
+    background-color: var(--bs-primary-background);
+
+    .row{
+        padding: 20px 0;
+                  
+        .custom-cake-order-form-image {
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+
+            img {
+                width: 100%;
+            }
+        }
+
+        .custom-cake-order-form-container {
+
+            form {
+                width: 100%;
+            }
+            
+            .form-control{
+                border-radius: 0;
+                height: 40px;
+                background-color: white;
+                border-color: var(--bs-dark-green);
+                letter-spacing: 0px;
+                color: var(--bs-darker-text);
+            }
+
+            #nameInput, #emailInput, #subjectInput {
+                padding: 6px 12px;
+            }
+            
+            #messageInput {
+                height: 128px;
+            }
+
+            .form-button-container{
+                width: 100%;
+
+                a {
+                    .btn-primary{
+                        width: 100%;
+                        padding: 10px 25px;
+                        border-radius: 25px;
+                    }
+    
+                }
+            }
+        }
+    }
+}
+
+/****************** CONTACT US - HERO ******************/
+
+.contact-hero-component{
+    position: relative;
+    min-height: 400px;
+    background-color: var(--bs-primary-background);
+
+    .contact-hero-content-container{
+        z-index: 1;
+        width: 100%;
+
+        h1 {
+            color: var(--bs-lighter-text);
+            width: 100%;
+            text-align: center;
+        }
+    }
+
+    .bg-image-container{
+        width: 100%;
+        position: absolute;
+    
+        img {
+            width: 100%;
+            filter: brightness(60%);
+        }
+    }
+}
+
+/****************** CONTACT US - INFO ******************/
+
+.contact-info-component{
+    background-color: var(--bs-primary-background);
+
+    .contact-info-text-container {
+        width: 50%;
+    
+        .contact-info-text {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+    
+            h2 {
+                text-align: center;
+                color: var(--bs-darker-text);
+                margin-bottom: 15px;
+            }
+
+            h3 {
+                text-align: center;
+                color: var(--bs-darker-text);
+                font-weight: bold;
+                margin: 50px 0 25px 0;
+            }
+        }
+    }
+
+    .contact-info-container {
+        border-right: 2px solid var(--bs-tertiary-background);
+
+        &:last-child{
+            border-right: none;
+        }
+
+        .contact-info-content {
+    
+            .contact-info-icon {
+                margin-bottom: 10px;
+                height: 50px;
+    
+                img {
+                    height: 100%;
+                    color: var(--bs-primary);
+                }
+            }
+    
+            h4 {
+                color: var(--bs-darker-text);
+                margin-bottom: 10px;
+            }
+    
+            p {
+                color: var(--bs-darker-text);
+                margin-bottom: 10px;
+            }
+        }
+    }
+}
+
+/****************** CONTACT US - MESSAGE FORM ******************/
+
+.contact-form-component {
+    background-color: var(--bs-primary-background);
+
+    .row{
+        padding: 20px 0;
+
+        .contact-form-container {
+
+            form {
+                width: 60%;
+            }
+            
+            .form-control{
+                border-radius: 0;
+                height: 40px;
+                background-color: white;
+                border-color: var(--bs-dark-green);
+                letter-spacing: 0px;
+                color: var(--bs-darker-text);
+            }
+
+            #nameInput, #emailInput, #subjectInput {
+                padding: 6px 12px;
+            }
+            
+            #messageInput {
+                height: 128px;
+            }
+
+            .form-button-container{
+                width: 100%;
+
+                a {
+                    .btn-primary{
+                        width: 100%;
+                        padding: 10px 25px;
+                        border-radius: 25px;
+                    }
+    
+                }
+            }
+        }
+    }
+}
+
+/****************** CONTACT US - MAP ******************/
+
+.contact-map-component {
+    margin: 50px 0;
+
+    .contact-map-text-container {
+        width: 50%;
+    
+        .contact-map-text {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+
+            h3 {
+                text-align: center;
+                color: var(--bs-darker-text);
+                font-weight: bold;
+                margin-bottom: 25px;
+            }
+        }
+    }
+}
