--- a/css/main.css
+++ b/css/main.css
@@ -12182,7 +12182,7 @@ body {
   margin: 5px;
 }
 .mobile-navigation h4, .mobile-navigation .h4 {
-  font-size: 25px;
+  font-size: 35px;
   letter-spacing: 0px;
 }
 .mobile-navigation ul {
@@ -12190,32 +12190,64 @@ body {
   flex-direction: column;
   list-style-type: none;
   padding: 0;
+  margin: 0;
 }
 .mobile-navigation ul li {
   margin: 15px 0;
   padding: 0;
+  font-size: 25px;
+}
+.mobile-navigation ul li i {
+  margin-right: 10px;
 }
 .mobile-navigation ul li a {
   width: 100%;
   height: 100%;
   letter-spacing: 0px;
-  color: var(--bs-darker-text);
+  color: var(--bs-lighter-text);
   text-decoration: none;
 }
 .mobile-navigation ul li a:hover {
   color: var(--bs-primary);
 }
+.mobile-navigation .offcanvas {
+  background-color: var(--bs-dark-green);
+  color: var(--bs-lighter-text);
+}
+.mobile-navigation .offcanvas .offcanvas-header .btn-close {
+  color: var(--bs-primary-background) !important;
+}
+.mobile-navigation .offcanvas .offcanvas-body {
+  padding: 0 16px 16px 16px;
+}
+.mobile-navigation .offcanvas .offcanvas-body .languages-mobile-container {
+  display: flex;
+  flex-direction: row;
+}
+.mobile-navigation .offcanvas .offcanvas-body .languages-mobile-container li .language {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--bs-lighter-text);
+  font-size: 25px;
+}
+.mobile-navigation .offcanvas .offcanvas-body .languages-mobile-container li .language:active {
+  background-color: var(--bs-primary);
+}
+.mobile-navigation .offcanvas .offcanvas-body .languages-mobile-container li .language img {
+  width: 50%;
+  margin-right: 7px;
+}
 .mobile-navigation .offcanvas-footer {
   display: flex;
   align-items: center;
-  justify-content: space-between;
   padding: var(--bs-offcanvas-padding-y) var(--bs-offcanvas-padding-x);
 }
 
 /****************** HOME - HERO ******************/
 .home-hero-component {
   position: relative;
-  min-height: 725px;
+  min-height: 750px;
   background-color: var(--bs-primary-background);
   padding-top: 100px;
   padding-bottom: 50px;
@@ -12268,7 +12300,6 @@ body {
 .home-default-container .row .home-default-text-container h2, .home-default-container .row .home-default-text-container .h2 {
   color: var(--bs-darker-text);
   text-align: left;
-  margin: 0 0 20px 10px;
   width: 90%;
 }
 .home-default-container .row .home-default-text-container .home-default-text-p {
@@ -12279,26 +12310,27 @@ body {
 
 /****************** HOME - SPECIAL OFFER ******************/
 /****************** HOME - CUSTOM CAKES ******************/
-.offer-component {
+/****************** ABOUT US - CONTACT ******************/
+.promotion-banner-component {
   position: relative;
   min-height: 500px;
 }
-.offer-component .offer-content-container {
+.promotion-banner-component .promotion-banner-content-container {
   z-index: 1;
 }
-.offer-component .offer-content-container h2, .offer-component .offer-content-container .h2 {
+.promotion-banner-component .promotion-banner-content-container h2, .promotion-banner-component .promotion-banner-content-container .h2 {
   text-align: center;
   margin-bottom: 15px;
   width: 85%;
   color: var(--bs-lighter-text);
 }
-.offer-component .bg-image-container {
+.promotion-banner-component .bg-image-container {
   width: 100%;
   position: absolute;
   transform-origin: top center;
   transform: scale(1);
 }
-.offer-component .bg-image-container img {
+.promotion-banner-component .bg-image-container img {
   width: 100%;
   filter: brightness(60%);
 }
@@ -12726,32 +12758,34 @@ body {
   padding-top: 30px;
 }
 
-/****************** ABOUT US - CONTACT ******************/
-.about-contact-component {
-  position: relative;
-  min-height: 500px;
-  margin: 60px 0;
-}
-.about-contact-component .about-contact-content-container {
-  z-index: 1;
-}
-.about-contact-component .about-contact-content-container h2, .about-contact-component .about-contact-content-container .h2 {
-  text-align: center;
-  margin-bottom: 15px;
-  width: 85%;
-  color: var(--bs-lighter-text);
-}
-.about-contact-component .bg-image-container {
-  width: 100%;
-  position: absolute;
-  transform-origin: top center;
-  transform: scale(1);
-}
-.about-contact-component .bg-image-container img {
-  width: 100%;
-  filter: brightness(60%);
-}
+/* .about-contact-component{
+    position: relative;
+    min-height: 500px;
+    margin: 60px 0;
 
+    .about-contact-content-container{
+        z-index: 1;
+
+        h2 {
+            text-align: center;
+            margin-bottom: 15px;
+            width: 85%;
+            color: var(--bs-lighter-text);
+        }
+    }
+
+    .bg-image-container{
+        width: 100%;
+        position: absolute;
+        transform-origin: top center;
+        transform: scale(1.0);
+
+        img {
+            width: 100%;
+            filter: brightness(60%);
+        }
+    }
+} */
 /****************** SHOP - HERO ******************/
 .shop-hero-component {
   position: relative;
