--- a/css/main.scss
+++ b/css/main.scss
@@ -193,7 +193,7 @@ body {
     }
 
     h4 {
-        font-size: 25px;
+        font-size: 35px;
         letter-spacing: 0px;
     }
 
@@ -202,16 +202,22 @@ body {
         flex-direction: column;
         list-style-type: none;
         padding: 0;
+        margin: 0;
 
         li {
             margin: 15px 0;
             padding: 0;
+            font-size: 25px;
+
+            i {
+                margin-right: 10px;
+            }
 
             a {
                 width: 100%;
                 height: 100%;
                 letter-spacing: 0px;
-                color: var(--bs-darker-text);
+                color: var(--bs-lighter-text);
                 text-decoration: none;
 
                 &:hover {
@@ -221,10 +227,48 @@ body {
         }
     }
 
+    .offcanvas {
+        background-color: var(--bs-dark-green);
+        color: var(--bs-lighter-text);
+
+        .offcanvas-header {
+            .btn-close {
+                color: var(--bs-primary-background)!important;
+            }
+        }
+
+        .offcanvas-body {
+            padding: 0 16px 16px 16px;
+
+            .languages-mobile-container {
+                display: flex;
+                flex-direction: row;
+    
+                li {                
+                    .language {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        color: var(--bs-lighter-text);
+                        font-size: 25px;
+
+                        &:active {
+                            background-color: var(--bs-primary);
+                        }
+    
+                        img {
+                            width: 50%;
+                            margin-right: 7px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
     .offcanvas-footer {
         display: flex;
         align-items: center;
-        justify-content: space-between;
         padding: var(--bs-offcanvas-padding-y) var(--bs-offcanvas-padding-x);
     }
 }
@@ -233,7 +277,7 @@ body {
 
 .home-hero-component{
     position: relative;
-    min-height: 725px;
+    min-height: 750px;
     background-color: var(--bs-primary-background);
     padding-top: 100px;
     padding-bottom: 50px;
@@ -297,7 +341,6 @@ body {
             h2 {
                 color: var(--bs-darker-text);
                 text-align: left;
-                margin: 0 0 20px 10px;
                 width: 90%;
             }
 
@@ -312,12 +355,13 @@ body {
 
 /****************** HOME - SPECIAL OFFER ******************/
 /****************** HOME - CUSTOM CAKES ******************/
+/****************** ABOUT US - CONTACT ******************/
 
-.offer-component{
+.promotion-banner-component{
     position: relative;
     min-height: 500px;
 
-    .offer-content-container{
+    .promotion-banner-content-container{
         z-index: 1;
 
         h2 {
@@ -862,9 +906,9 @@ body {
     }
 }
 
-/****************** ABOUT US - CONTACT ******************/
 
-.about-contact-component{
+
+/* .about-contact-component{
     position: relative;
     min-height: 500px;
     margin: 60px 0;
@@ -891,7 +935,7 @@ body {
             filter: brightness(60%);
         }
     }
-}
+} */
 
 /****************** SHOP - HERO ******************/
 
