--- a/css/main.css
+++ b/css/main.css
@@ -13076,29 +13076,69 @@ body {
 }
 .contact-form-component .row {
   padding: 20px 0;
+  /* .contact-form-container {
+
+      form {
+          width: 60%;
+      }
+
+      .form-control{
+          border-radius: 0;
+          height: 40px;
+          background-color: white;
+          border-color: var(--bs-dark-green);
+          letter-spacing: 0px;
+          color: var(--bs-darker-text);
+          padding: 6px 12px;
+      }
+
+      #messageInput {
+          height: 128px;
+      }
+
+      .form-button-container{
+          width: 100%;
+
+          a {
+              .btn-primary{
+                  width: 100%;
+                  padding: 10px 25px;
+                  border-radius: 25px;
+              }
+
+          }
+      }
+  } */
 }
-.contact-form-component .row .contact-form-container form {
+.contact-form-component .row .wpforms-container {
   width: 60%;
+  margin: 0;
 }
-.contact-form-component .row .contact-form-container .form-control {
+.contact-form-component .row .wpforms-container .wpforms-field {
+  padding: 10px 0;
+}
+.contact-form-component .row .wpforms-container .wpforms-field input {
   border-radius: 0;
-  height: 40px;
-  background-color: white;
   border-color: var(--bs-dark-green);
-  letter-spacing: 0px;
-  color: var(--bs-darker-text);
-  padding: 6px 12px;
 }
-.contact-form-component .row .contact-form-container #messageInput {
-  height: 128px;
+.contact-form-component .row .wpforms-container .wpforms-field textarea {
+  border-radius: 0;
+  border-color: var(--bs-dark-green);
 }
-.contact-form-component .row .contact-form-container .form-button-container {
-  width: 100%;
+.contact-form-component .row .wpforms-container .wpforms-submit-container {
+  margin: 0;
+  display: flex;
+  justify-content: center;
 }
-.contact-form-component .row .contact-form-container .form-button-container a .btn-primary {
-  width: 100%;
-  padding: 10px 25px;
+.contact-form-component .row .wpforms-container .wpforms-submit-container .wpforms-submit {
+  background-color: var(--bs-primary);
+  width: 23%;
   border-radius: 25px;
+}
+.contact-form-component .row .wpforms-container .wpforms-confirmation-container-full {
+  background-color: #faf4ec;
+  color: #7a603a;
+  border-color: #7a603a;
 }
 
 /****************** CONTACT US - MAP ******************/
