--- a/css/main.scss
+++ b/css/main.scss
@@ -745,13 +745,14 @@ body {
     .row{
         padding: 30px 0;
           
-        .secondary-block-image {
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center;
-
-            img {
-                width: 100%;
+        .secondary-block-title {
+            
+            p {
+                text-align: center;
+                font-size: 65px;
+                font-weight: 600;
+                letter-spacing: 0px;
+                color: var(--bs-tertiary-background);
             }
         }
 
@@ -768,7 +769,7 @@ body {
             p{
                 color: var(--bs-darker-text);
                 margin: 0 0 20px 10px!important;
-                width: 85%;
+                width: 90%;
             }
         }
     }
@@ -784,6 +785,9 @@ body {
     }
 
     .gallery {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         padding: 7px;
         margin: 0;
     }
