--- a/css/main.css
+++ b/css/main.css
@@ -12304,7 +12304,7 @@ body {
 }
 .primary-block-container .row .primary-block-text-container p {
   color: var(--bs-darker-text);
-  margin: 0 0 20px 10px !important;
+  margin: 20px 0 20px 10px !important;
   width: 95%;
 }
 
@@ -12319,7 +12319,7 @@ body {
 .promotion-banner-component .promotion-banner-content-container h2, .promotion-banner-component .promotion-banner-content-container .h2 {
   text-align: center;
   margin-bottom: 15px;
-  width: 85%;
+  width: 100%;
   color: var(--bs-lighter-text);
 }
 .promotion-banner-component .bg-image-container {
@@ -12664,6 +12664,9 @@ body {
   align-items: center;
   padding: 7px;
   margin: 0;
+}
+.gallery-container .gallery img {
+  height: 100%;
 }
 
 /****************** ABOUT US - BAKING PHILOSOPHY ******************/
@@ -13028,6 +13031,7 @@ body {
 /****************** CONTACT US - INFO ******************/
 .contact-info-component {
   background-color: var(--bs-primary-background);
+  margin-top: 30px;
 }
 .contact-info-component .contact-info-text-container {
   width: 50%;
@@ -13047,7 +13051,7 @@ body {
   text-align: center;
   color: var(--bs-darker-text);
   font-weight: bold;
-  margin: 50px 0 25px 0;
+  margin: 50px 0 0 0;
 }
 .contact-info-component .contact-info-container {
   border-right: 2px solid var(--bs-tertiary-background);
@@ -13073,10 +13077,10 @@ body {
 }
 
 /****************** CONTACT US - MESSAGE FORM ******************/
-.contact-form-component {
+.message-form-component {
   background-color: var(--bs-primary-background);
 }
-.contact-form-component .row {
+.message-form-component .row {
   padding: 20px 0;
   /* .contact-form-container {
 
@@ -13112,32 +13116,32 @@ body {
       }
   } */
 }
-.contact-form-component .row .wpforms-container {
+.message-form-component .row .wpforms-container {
   width: 60%;
   margin: 0;
 }
-.contact-form-component .row .wpforms-container .wpforms-field {
+.message-form-component .row .wpforms-container .wpforms-field {
   padding: 10px 0;
 }
-.contact-form-component .row .wpforms-container .wpforms-field input {
+.message-form-component .row .wpforms-container .wpforms-field input {
   border-radius: 0;
   border-color: var(--bs-dark-green);
 }
-.contact-form-component .row .wpforms-container .wpforms-field textarea {
+.message-form-component .row .wpforms-container .wpforms-field textarea {
   border-radius: 0;
   border-color: var(--bs-dark-green);
 }
-.contact-form-component .row .wpforms-container .wpforms-submit-container {
+.message-form-component .row .wpforms-container .wpforms-submit-container {
   margin: 0;
   display: flex;
   justify-content: center;
 }
-.contact-form-component .row .wpforms-container .wpforms-submit-container .wpforms-submit {
+.message-form-component .row .wpforms-container .wpforms-submit-container .wpforms-submit {
   background-color: var(--bs-primary);
   width: 23%;
   border-radius: 25px;
 }
-.contact-form-component .row .wpforms-container .wpforms-confirmation-container-full {
+.message-form-component .row .wpforms-container .wpforms-confirmation-container-full {
   background-color: #faf4ec;
   color: #7a603a;
   border-color: #7a603a;
